--- a/scratch/style.css
+++ b/scratch/style.css
@@ -1,3 +1,10 @@
+p#foohter{
+  border-top: 1px solid black;
+  background-color: white;
+  padding-top: 5em;
+  margin-left: 0;
+}
+
 p{
   color: red;
   background-color: lightgrey;
