--- a/scratch/style.css
+++ b/scratch/style.css
@@ -1,3 +1,9 @@
+em{
+  font-style: normal;
+  text-decoration: underline;
+}
+
+
 p#foohter{
   border-top: 1px solid black;
   background-color: white;
