--- a/scratch/style.css
+++ b/scratch/style.css
@@ -1,4 +1,4 @@
-p.warning{
+p.warning {
   background-color: red;
   color: white;
   font-style: bold;
@@ -7,25 +7,35 @@ p.warning{
   text-shadow: 1px 1px 1px black;
 }
 
-p.warning::before{
+p.warning::before {
   content: "WARNINNG!: "
 }
 
-p em{
+p em {
   font-style: normal;
   text-decoration: underline;
 }
 
-p#foohter{
+p#foohter {
   border-top: 1px solid black;
   background-color: white;
   padding-top: 0.5em;
   margin-left: 0;
 }
 
-p{
+p {
   color: red;
   background-color: lightgrey;
   margin-left: 1em;
   margin-right: 1em;
+}
+h1{
+   font-family: 'Nanum Pen Script', cursive
+}
+
+p{
+  font-family: 'Lateef', cursive;
+}
+ul{
+  font-family: 'Lateef', cursive;
 }
