--- a/scratch/breadcrumb.css
+++ b/scratch/breadcrumb.css
@@ -1,18 +1,43 @@
 ul.breadcrumb {
   padding-left: 0;
-  display:inline;
-  background-color: lightgray;
+  background-color: lightgrey;
 }
 
-ul.breadcrumb li {
-  display: inline;
-  padding-left: 0;
+@media screen and (min-width: 600px) {
+  ul.breadcrumb li {
+    display: inline;
+  }
+
+  ul.breadcrumb li::before {
+    content: " > ";
+  }
+
+  ul.breadcrumb li:first-child::before {
+    content: "";
+  }
 }
 
-ul.breadcrumb li::before {
-  content: " > "
-}
+@media screen and (max-width: 600px) {
+  ul.breadcrumb li::before {
+    content: "\2ba1";
+    display: inline-block;
+    min-width: 1em;
+  }
 
-ul.breadcrumb li:first-child::before {
-content: "";
+  ul.breadcrumb li:first-child::before {
+    content: "";
+    min-width: 0;
+  }
+
+  ul.breadcrumb li:nth-child(2)::before {
+    padding-left: 1em;
+  }
+
+  ul.breadcrumb li:nth-child(3)::before {
+    padding-left: 2em;
+  }
+
+  ul.breadcrumb li:nth-child(n+4) {
+    padding-left: 3em;
+  }
 }
